--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -16,9 +16,9 @@ section: blog
 {% endif %}
 
 <div class='listing col6 pad4h margin3'>
-  <div class='heading'>
+  <!-- div class='heading'>
     <h1>{{page.title}}</h1><span class='date'>{{page.date | date:"%b %d"}}</span>
-  </div>
+  </div -->
 
   <div class='prose'>
     {{content}}
