--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,9 +50,14 @@ title: 'Jenesis: Distributed Unit Testing Foundation'
 
     <div id="recent_blog_posts_wrap" class="outer" style="padding: 10px 0px 10px 0px; background-color: #333; border-top: 0px;">
       <section id="recent_blog_posts" class="inner" style="background-color: #FFFFFF; padding: 20px 40px 40px 50px; border-radius: 15px; border-radius: 15px;">
+       <ul>
         {% for item in site.categories.blog limit:10 %}
-          <a class='item' href='{{site.baseurl}}{{item.url}}'>{{item.title}} <span class='date'>&#126; {{item.date | date:"%b %d"}}</span></a>
+          <li>
+            <a class='item' href='{{site.baseurl}}{{item.url}}'>{{item.title}}</a><br/>
+              <span class='date'>&nbsp;&nbsp;&nbsp;&nbsp;{{item.date | date:"%Y %B %d"}}</span>
+          </li>
         {% endfor %}
+        </ul>
       </section>
     </div>
 
