--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,7 @@ title: 'Jenesis: Distributed Unit Testing Foundation'
           </li>
         {% endfor %}
         </ul>
+        {% include rss-link.html %}
       </section>
     </div>
 
