--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@ title: 'Jenesis: Distributed Unit Testing Foundation'
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer" style="padding: 10px 0px 10px 0px; background-color: #333; border-top: 0px;">
+    <div id="main_content_wrap" class="outer" style="padding: 10px 0px 10px 0px; background-color: #333; border-top: 0px; float: left;">
       <section id="main_content" class="inner" style="background-color: #FFFFFF; padding: 20px 40px 40px 50px; border-radius: 15px; border-radius: 15px;">
         {{content}}
       </section>
