--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,8 +48,8 @@ title: 'Jenesis: Distributed Unit Testing Foundation'
       </section>
     </div>
 
-    <div id="recent_blog_posts_wrap" class="outer" style="padding: 10px 0px 10px 0px; background-color: #333; border-top: 0px;">
-      <section id="recent_blog_posts" class="inner" style="background-color: #FFFFFF; padding: 20px 40px 40px 50px; border-radius: 15px; border-radius: 15px;">
+    <div id="recent_blog_posts_wrap" class="outer" style="padding: 5px 0px 5px 0px; background-color: #333; border-top: 0px;">
+      <section id="recent_blog_posts" class="inner" style="background-color: #FFFFFF; border-radius: 15px; border-radius: 15px;">
        <ul>
         {% for item in site.categories.blog limit:10 %}
           <li>
