--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@ title: 'Jenesis: Distributed Unit Testing Foundation'
       </section>
     </div>
 
-    <div id="recent_blog_posts_wrap" class="outer" style="padding: 5px 0px 5px 0px; background-color: #333; border-top: 0px; width: 104px;">
+    <div id="recent_blog_posts_wrap" class="outer" style="padding: 5px 0px 5px 0px; background-color: #333; border-top: 0px; width: 104px; clear: left;">
       <section id="recent_blog_posts" class="inner" style="background-color: #FFFFFF; border-radius: 15px; border-radius: 15px;">
        <ul>
         {% for item in site.categories.blog limit:10 %}
