--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,13 +42,11 @@ title: 'Jenesis: Distributed Unit Testing Foundation'
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer" style="padding: 10px 0px 10px 0px; background-color: #333; border-top: 0px; float: left;">
+    <div id="main_content_wrap" class="outer" style="padding: 10px 0px 10px 0px; background-color: #333; border-top: 0px;">
       <section id="main_content" class="inner" style="background-color: #FFFFFF; padding: 20px 40px 40px 50px; border-radius: 15px; border-radius: 15px;">
         {{content}}
       </section>
-    </div>
 
-    <div id="recent_blog_posts_wrap" class="outer" style="padding: 5px 0px 5px 0px; background-color: #333; border-top: 0px; width: 104px; float: right;">
       <section id="recent_blog_posts" class="inner" style="background-color: #FFFFFF; border-radius: 15px; border-radius: 15px;">
        <ul>
         {% for item in site.categories.blog limit:10 %}
